--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "glitch-mvp-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running.",
-  "main": "glitch/glitch.js",
+  "name": "express-hello-world",
+  "version": "1.0.0",
+  "description": "Express Hello World on Render",
+  "main": "adaptable/adaptable.js",
+  "repository": "",
+  "author": "Render Developers",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "start": "node glitch/glitch.js"
+    "start": "node adaptable/adaptable.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,15 +16,6 @@
     "request": "^2.88.2"
   },
   "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-mvp-node"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "nginx"
-  ]
+    "node": ">=14"
+  }
 }
