--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "nginx": ""
   },
   "engines": {
     "node": ">=14"
